<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/login"
        android:icon="@drawable/ic_login"
        android:title="@string/login"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/register"
        android:icon="@drawable/ic_register"
        android:title="@string/register"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

</menu>